[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# Let's prevent default stack unwinding when panic occurs, rather let it abort
[profile.dev]
# panic = "abort"

[profile.release]
# panic = "abort"

[package.metadata.bootimage]
# iobase: base I/O port address for the isa-debug-exit device. Specifies the starting address of the I/O port range that the device will use.
# iosize: the size of the I/O port for the isa-debug-exit device. Specifies how many I/O ports for the device will occupy starting from the iobase
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33
